# letsplayretrogames-cli

./: .gitignore  .oranda.config.json  Cargo.toml  README.md  artifacts.json  index.html  oranda.json
.github/workflows/: axosite.yml  publish.yaml  test.yaml
artifacts/: index.html
funding/: index.html
npm/: .gitignore  binary.js  package.json
public/: index.html  style.css
src/: api.rs  lib.rs  main.rs
src/utils/: constants.rs  get_game_url.rs  get_rating.rs  mod.rs
tests/: cli.rs
