[package]
name = "letsplayretrogames"
version = "0.2.2"
edition = "2021"
description = "A CLI for the letsplayretro.games website"
repository = "https://github.com/SaraVieira/letsplayretrogames-cli"
readme = "README.md"
keywords = ["letsplayretrogames"]
categories = ["command-line-utilities"]
license = "MIT"
homepage = "https://github.com/SaraVieira/letsplayretrogames-cli"
authors = ["Sara Vieira"]

[dependencies]
spinners = "4.1.0"
clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
comfy-table = "6.1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"