[package]
name = "letsplayretrogames"
version = "0.2.9"
edition = "2021"
description = "A CLI for the letsplayretro.games website"
repository = "https://github.com/SaraVieira/letsplayretrogames-cli"
readme = "README.md"
keywords = ["letsplayretrogames"]
categories = ["command-line-utilities"]
license = "MIT"
homepage = "https://github.com/SaraVieira/letsplayretrogames-cli"
authors = ["Sara Vieira"]

[dependencies]
spinners = "4.1.0"
clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0"
reqwest = { version = "0.11.6", default-features = false, features = [
    "gzip",
    "json",
    "rustls-tls",
]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
comfy-table = "6.1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.6"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
